<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/jsbg"
    tools:context="fr.enseeiht.superjumpingsumokart.application.GUIWelcome">

    <RelativeLayout
        android:id="@+id/content_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fr.enseeiht.superjumpingsumokart.application.GUIWelcome"
        tools:showIn="@layout/activity_gui_welcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <Button
                android:text="@string/start_race_btn"
                android:layout_height="wrap_content"
                android:id="@+id/startRaceBtn"
                android:width="@dimen/menu_btn_width" />

            <Button
                android:text="@string/set_circuit_btn"
                android:layout_height="wrap_content"
                android:id="@+id/setCircuitBtn"
                android:width="@dimen/menu_btn_width" />

            <Button
                android:text="@string/hostBTButtonOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectBluetoothBtn"
                android:width="@dimen/menu_btn_width"
                android:textOn="@string/hostBTButtonOn"
                android:textOff="@string/hostBTButtonOff"/>

            <Button
                android:text="@string/joinBTButtonOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/joinBluetoothBtn"
                android:width="@dimen/menu_btn_width"
                android:textOn="@string/joinBTButtonOn"
                android:textOff="@string/joinBTButtonOff"/>
        </GridLayout>

        <Button
            android:text="@string/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/exitBtn" />

        <TextView
            android:text="@string/home_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView"
            android:textAllCaps="true"
            android:textStyle="normal|bold|italic"
            android:textSize="36sp"
            android:textColor="@android:color/white" />

        <ToggleButton
            android:text="@string/connect_wifi_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectWifiBtn"
            android:width="@dimen/menu_btn_width"
            android:textOn="@string/wifiConnectionBtnOn"
            android:textOff="@string/wifiConnectionBtnOff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/optionsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="0dp"
            android:text="Options" />
    </RelativeLayout>
</RelativeLayout>
