<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="app.v43.usinedufutur.application.circuit.GUICircuit">



    <RelativeLayout
        android:id="@+id/content_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.v43.usinedufutur.application.GUIWelcome"
        tools:showIn="@layout/activity_gui_circuit">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <Button
                android:text="@string/start_race_btn"
                android:layout_height="wrap_content"
                android:id="@+id/startRaceBtn"
                android:width="@dimen/menu_btn_width" />

            <Button
                android:text="Select Circuit"
                android:layout_height="wrap_content"
                android:id="@+id/setCircuitBtn"
                android:width="@dimen/menu_btn_width" />

            <ToggleButton
                android:text="@string/connect_wifi_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectWifiBtn"
                android:width="@dimen/menu_btn_width"
                android:textOn="@string/wifiConnectionBtnOn"
                android:textOff="@string/wifiConnectionBtnOff"/>

            <Button
                android:text="@string/connect_bluetooth_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectBluetoothBtn"
                android:width="@dimen/menu_btn_width" />

            <Button
                android:text="@string/join_bluetooth_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/joinBluetoothBtn"
                android:width="@dimen/menu_btn_width" />
        </GridLayout>

        <Button
            android:text="@string/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/exitBtn" />

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
