<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guimodifycircuit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.v43.usinedufutur.application.circuit.GUIModifyCircuit">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="3">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text|textPersonName"
                android:ems="10"
                android:id="@+id/circuitNameText"
                android:hint="@string/circuitNameText" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:paddingLeft="20dp"
                android:id="@+id/lapsText"
                android:inputType="number"
                android:hint="@string/lapsText" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/nbCheckPointTxt"
                android:hint="@string/checkPointTxt"
                android:textAlignment="center"
                android:paddingRight="10dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1.14">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listMarkers"
                android:clickable="true"
                android:drawSelectorOnTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/symbolText"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/addMarkerBtn"
                android:text="@string/add_marker_btn"
                android:layout_weight="1" />

            <Button
                android:text="@string/deleteMarker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/deleteMarkerBtn"
                android:layout_weight="1" />

            <Button
                android:text="@string/confirm_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/confirmBtn"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
